fix background bug

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -322,7 +322,7 @@
                     </div>
                 </div>
                 <a class="clradd" onmouseup="addColorPicker()"><i class="fa-solid fa-plus-circle"></i> Add Color</a>
-                <a class="clraddfg" onmouseup="addForegroundColorPicker()"><i class="fa-solid fa-circle-half-stroke"></i> Add Adaptive</a>
+                <a title="Add a color that dynamically changes with your system theme" class="clraddfg" onmouseup="addForegroundColorPicker()"><i class="fa-solid fa-circle-half-stroke"></i> Add Adaptive</a>
 
                 <p class="texttip">
                     The foreground elements will cycle through the chosen colors
