--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -644,7 +644,7 @@
     <br>
     <br>
     <br>
-    <p style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px;">Countdown is a free service provided by <a class="aintext" style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; text-decoration: underline;" href="michaeldors.com">michaeldors.com</a>.</p>
+    <p style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px;">Countdown is a free service provided by <a class="aintext" style="color:var(--mainforegroundcolor); font-family: Dosis; font-size:17px; margin-bottom:20px; text-decoration: underline;" href="https://michaeldors.com/">michaeldors.com</a>.</p>
 
       </div>
 
