--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -400,7 +400,6 @@
                     Any ADs that may be placed by the service will remain.
                 </p>
                 <a class="aintext texttip" href="#eouoptions" style=" text-decoration: underline;">You can disable ending sounds for all countdowns in your Personal Options.</a>
-                <div id="playerContainer" style="display: none;"></div>
                 <br>
                 <br>
                 <Br>
@@ -701,5 +700,7 @@
         </div>
 
     </div>
+    <div id="playerContainer"></div>
+
 </body>
 <script src="betaapp.js"></script>
