--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -378,7 +378,10 @@
 		<br>
                 <h2 class="textelement" style="font-family: 'Dosis';">Confetti Options</h2>
                 <a title="Default confetti themed to your colors" class="aintext selectedfontpicker" id="defaultconfetti" onmouseup="ConfettiModeDefault(); SetCountDowngeneral();"><i style="height:96px; display: inline-block; text-align: center; line-height: 96px; font-size:20px" class="fa-solid fa-trophy"></i></a>
-                <a title="Input an emoji or symbol to use as confetti" class="aintext fontpicker" id="emojiconfetti" onmouseup="ConfettiModeEmoji(); SetCountDowngeneral();"><input onblur="ConfettiModeEmoji(); SetCountDowngeneral();" id="confettiEmojiPicker" placeholder="😃"></a>
+                <a title="Input an emoji or symbol to use as confetti" class="aintext fontpicker" id="emojiconfetti" style="position:relative;" onmouseup="ConfettiModeEmoji(); SetCountDowngeneral();">
+                    <span id="emojiOverlay"></span>
+                    <input onblur="ConfettiModeEmoji(); SetCountDowngeneral();" id="confettiEmojiPicker" placeholder="😃" data-placeholders="😃,🎉,A,✨,🎈,!,🚀,😎,🍕🎶,★,⚾🏀,♻,☀️">
+                </a>
                 <a title="Festive snowflakes instead of confetti" class="aintext fontpicker" id="snowconfetti" onmouseup="ConfettiModeSnow(); SetCountDowngeneral();"><i style="height:96px; display: inline-block; text-align: center; line-height: 96px; font-size:20px" class="fa-solid fa-snowflake"></i></a>
                 <a title="Disable confetti on this Countdown (you can disable confetti on all Countdowns in your Personal Options)" class="aintext fontpicker" id="noconfetti" onmouseup="ConfettiModeNone(); SetCountDowngeneral();"><i style="height:96px; display: inline-block; text-align: center; line-height: 96px; font-size:20px" class="fa-regular fa-circle-xmark"></i></a>
                 <br>
