--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -434,7 +434,7 @@
                             <p style="color: white; font-size: 27px;"><i class="fa-solid fa-table-cells-row-unlock"></i> Import your schedule</p>
                             <p style="color: white; font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:20px;">Import an exported calendar from any major calendar service,<br>or create one in seconds with our Custom GPT.</p>
                             <a class="sharebutton" onclick="importICSFile();"><i class="fa-solid fa-calendar-week"></i> Import Calendar</a>
-                            <a class="sharebutton"><i class="fa-solid fa-comment"></i> Countdown Schedule GPT</a>
+                            <a href="http://gpt.dors.fyi/" target="_blank" class="sharebutton"><i class="fa-solid fa-comment"></i> Countdown Schedule GPT</a>
                             <br>
                             <a style="color: white; font-family:'Dosis'; margin-top:10px; margin-bottom:10px;" href="docs#export-cal-to-schedule" target="_blank" rel="noopener noreferrer" class="aintext"><i class="fa-solid fa-circle-info"></i> How To Export</a>
                         </div>
