--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -307,7 +307,7 @@
                 <div id="colorPickersContainer">
                     <div class="colorpicker-container">
                         <input class="colorpicker" id="color1" type="color" value="#8426ff" onblur="SetCountDowngeneral();"/>
-                        <div class="remove-button" style="opacity:0 !important" onclick="removeColorPicker(this)">-</div>
+                        <div class="remove-button" style="opacity:0 !important; user-select: none; cursor: default;">-</div>
                     </div>
                     <div class="colorpicker-container">
                         <input class="colorpicker" id="color2" type="color" value="#3ab6ff" onblur="SetCountDowngeneral();"/>
