--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -446,9 +446,9 @@
                             <input type="text" placeholder="Pick a title" id="schedule-eventTitle" required>
                         </div>
                         <div class="schedule-form-group">
-                            <input type="time" class="manipulatedefaultvaluedatetime" id="schedule-startTime" style="margin-right:10px" required>
+                            <input type="time" class="scheduletimeinput" id="schedule-startTime" style="margin-right:10px" required>
                             <label for="schedule-endTime">to</label>
-                            <input type="time" class="manipulatedefaultvaluedatetime" id="schedule-endTime" style="margin-left:10px;" required>
+                            <input type="time" class="scheduletimeinput" id="schedule-endTime" style="margin-left:10px;" required>
                         </div>
                         <a id="schedule-addOrUpdateEventBtn"><i class="fa-solid fa-plus-circle"></i> Add to Regular Schedule</a>
 			<a id="addtoexceptionbutton" onclick="selectexceptiontoaddevent();"><i class="fa-solid fa-calendar-day"></i> Add to Exception</a>
