--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -378,7 +378,7 @@
 		<br>
 		<br>
                 <h2 class="textelement" style="font-family: 'Dosis';">Confetti Options</h2>
-                <a title="Default confetti themed to your colors" class="aintext selectedfontpicker" id="defaultconfetti" onmouseup="ConfettiModeDefault(); SetCountDowngeneral();"><i style="height:96px; display: inline-block; text-align: center; line-height: 96px; font-size:20px" class="fa-solid fa-trophy"></i></a>
+                <a title="Default confetti themed to your colors" class="aintext selectedfontpicker" id="defaultconfetti" onmouseup="ConfettiModeDefault(); SetCountDowngeneral();"><i style="height:96px; display: inline-block; text-align: center; line-height: 96px; font-size:20px" class="fa-solid fa-palette"></i></a>
                 <a title="Input an emoji or symbol to use as confetti" class="aintext fontpicker" id="emojiconfetti" style="position:relative;" onmouseup="ConfettiModeEmoji(); SetCountDowngeneral();">
                     <span id="emojiOverlay"></span>
                     <input onblur="ConfettiModeEmoji(); SetCountDowngeneral();" id="confettiEmojiPicker" placeholder="😃" data-placeholders="😃,🎉,A,✨,🎈,!,🚀,😎,🍕🎶,★,⚾🏀,♻,☀️">
