--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -34,7 +34,7 @@
 </head>
 
 <body id="body">
-    <input onblur="setcountdowntitle('front');" id="countdowntitle" type="text" />
+    <input onblur="setcountdowntitle('front');" id="countdowntitle" title="Update or add this Countdown's title" type="text" />
     <p id="clock" class="clock"></p>
 
 
