--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -158,7 +158,7 @@
                 <br>
                 <a class="sidebaranchor" href="#customizationoptions"><i style="background:#3ab6ff; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-palette"></i> Customization</a>
                 <br>
-                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background:#00DF52; color:white; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-flag-checkered"></i> Ending</a>
+                <a id="optionsendinganchor" class="sidebaranchor" href="#endingoptions"><i style="background:#00DF52; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-flag-checkered"></i> Ending</a>
                 <br>
                 <a class="sidebaranchor" href="#scheduleoptions"><i style="background:#FF9900; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
@@ -170,7 +170,7 @@
                 <br>
                 <a class="sidebaranchor" href="#eouoptions"><i style="background:#00DF52; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-child-reaching"></i> Ease of Use</a>
                 <br>
-                <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:#FF9900; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-puzzle-piece"></i> Formatting</a>
+                <a id="optionsoianchor" class="sidebaranchor" href="#inclusionoptions"><i style="background:#FF9900; color:white; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-puzzle-piece"></i> Formatting</a>
                 <br>
                 <a class="sidebaranchor" href="docs"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; font-size:15px !important; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-book"></i> Documentation</a>
                 <br>
