--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -162,7 +162,7 @@
                 <br>
                 <a class="sidebaranchor" href="#scheduleoptions"><i style="background:#FF9900; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-calendar"></i> Schedule</a>
                 <br>
-                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background:#8426FF; color:white; transition:opacity 1s ease-in-out; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-spinner"></i> Progress</a>
+                <a id="optionsprogressanchor" class="sidebaranchor" href="#progressoptions"><i style="background:#8426FF; color:white; box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);" class="fa-solid fa-spinner"></i> Progress</a>
             </div>
             <div id="settingssidebarpanepersonal">
                 <h3>Personal</h3>
