--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -496,6 +496,7 @@
 		<Br>
                 <br>
                 <br>
+                <div id="progressdatepickercontainer">
 		<h2 style="font-family: 'Dosis';">Starting Date</h2>
 		<input id="progressdatepicker" class="progressdatepicker" type="datetime-local" onblur="SetCountDowngeneral();" />
         <button style="background:transparent; border:none; outline:none; cursor:pointer">
@@ -506,6 +507,7 @@
         </p>
 		<br>
 		<br>
+    </div>
 		<br>
         <div>
 		<h2 style="font-family: 'Dosis';">Position</h2>
